Design: basical accomodation panel

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div style="height: 64px;" class="display-flex">
                 <div class="flex-vertical-row-align block-row-center">
                     <button id="head-button">
-                        <span class="head-text">에어비엔비에서 사랑받고 있는 '게스트 선호' 숙소에 대해 알아보기</span>
+                        <span class="text-16px">에어비엔비에서 사랑받고 있는 '게스트 선호' 숙소에 대해 알아보기</span>
                     </button>
                 </div>
             </div>
@@ -86,7 +86,8 @@
                             <div style="width: 100%; padding-bottom: 16px; margin: 0 36.5px;" class="flex-center">
                                 <div style=" max-width: 850px; height: 66px; border: 1px solid rgb(211, 211, 211); border-radius: 32px; width: 100%;"
                                     class="display-flex search-shadow">
-                                    <div style="flex-basis: 0%;" class="highlight-grey-tall flex-grow-shrink-10">
+                                    <div style="flex-basis: 0%;"
+                                        class="highlight-grey-tall flex-vertical-row-align flex-grow-shrink-10">
                                         <div style="padding: 14px 32px; border: 1px;">
                                             <div class="search-upper-text">
                                                 <span>여행지</span>
@@ -99,8 +100,8 @@
 
                                     <div class="grey-boundary"></div>
 
-                                    <div style="flex-basis: 0%;" class="display-flex flex-grow-shrink-10">
-                                        <div style="padding: 14px 32px; border: 1px; flex-basis: 0%;"
+                                    <div style="flex-basis: 0%;" class="flex-vertical-row-align flex-grow-shrink-10">
+                                        <div style="padding: 11px 32px; border: 1px; flex-basis: 0%;"
                                             class="highlight-grey-tall flex-grow-shrink-10">
                                             <div class="search-upper-text">
                                                 <span>체크인</span>
@@ -110,7 +111,7 @@
                                             </div>
                                         </div>
                                         <div class="grey-boundary"></div>
-                                        <div style="padding: 14px 32px; border: 1px; flex-basis: 0%;"
+                                        <div style="padding: 11px 32px; border: 1px; flex-basis: 0%;"
                                             class="highlight-grey-tall flex-grow-shrink-10">
                                             <div class="search-upper-text">
                                                 <span>체크아웃</span>
@@ -121,6 +122,7 @@
                                         </div>
                                     </div>
                                     <div class="grey-boundary"></div>
+
                                     <div style="flex-basis: 0%;"
                                         class="highlight-grey-tall flex-vertical-row-align flex-grow-shrink-10">
                                         <div style="flex-basis: 0%;" class="flex-grow-shrink-10">
@@ -161,7 +163,7 @@
                 <div style="margin: 8px;" class="flex-vertical-row-align">
                     <div style="padding: 12px;" class="highlight-grey">
                         <a href="https://www.airbnb.co.kr/host/homes">
-                            <span class="sub-text">당신의 공간을 에어비엔비하세요</span>
+                            <span class="text-14px">당신의 공간을 에어비엔비하세요</span>
                         </a>
 
                     </div>
@@ -213,9 +215,132 @@
     <!-- 2번째 div -->
     <div style="padding: 12px 40px 0px 40px;">
         <div style="height: 78px; width: 100%;" class="flex-vertical-row-align">
+            <div style="column-gap: 32px;" class="flex-vertical-row-align">
+                <div class="nav-item-frame">
+                    <div>
+                        <img src="https://a0.muscache.com/pictures/3b1eb541-46d9-4bef-abc4-c37d77e3c21b.jpg" alt=""
+                            width="24" height="24">
+                    </div>
+                    <div>
+                        <span>최고의 전망</span>
+                    </div>
 
+                </div>
+
+                <div class="nav-item-frame">
+                    <div>
+                        <img class="i181yxiv atm_j3_1osqo2v atm_vy_1o8jidz atm_e2_1wugsn5 atm_k4_wchqg7 atm_uc_n03lay atm_ui_idpfg4__p88qr9 dir dir-ltr"
+                            src="https://a0.muscache.com/pictures/3271df99-f071-4ecf-9128-eb2d2b1f50f0.jpg" alt=""
+                            width="24" height="24">
+                    </div>
+                    <span>초소형 주택</span>
+                </div>
+
+                <div class="nav-item-frame">
+                    <div>
+                        <img class="i181yxiv atm_j3_1osqo2v atm_vy_1o8jidz atm_e2_1wugsn5 atm_k4_wchqg7 atm_uc_n03lay atm_ui_idpfg4__p88qr9 dir dir-ltr"
+                            src="https://a0.muscache.com/pictures/10ce1091-c854-40f3-a2fb-defc2995bcaf.jpg" alt=""
+                            width="24" height="24">
+                    </div>
+                    <span>해변 근처</span>
+                </div>
+
+                <div class="nav-item-frame">
+                    <div>
+                        <img class="i181yxiv atm_j3_1osqo2v atm_vy_1o8jidz atm_e2_1wugsn5 atm_k4_wchqg7 atm_uc_n03lay atm_ui_idpfg4__p88qr9 dir dir-ltr"
+                            src="https://a0.muscache.com/pictures/aaa02c2d-9f0d-4c41-878a-68c12ec6c6bd.jpg" alt=""
+                            width="24" height="24">
+                    </div>
+                    <span>농장</span>
+                </div>
+
+                <div class="nav-item-frame">
+                    <div>
+                        <img class="i181yxiv atm_j3_1osqo2v atm_vy_1o8jidz atm_e2_1wugsn5 atm_k4_wchqg7 atm_uc_n03lay atm_ui_idpfg4__p88qr9 dir dir-ltr"
+                            src="https://a0.muscache.com/pictures/c8bba3ed-34c0-464a-8e6e-27574d20e4d2.jpg" alt=""
+                            width="24" height="24">
+                    </div>
+                    <span>스키</span>
+                </div>
+
+                <div class="nav-item-frame">
+                    <div>
+                        <img class="i181yxiv atm_j3_1osqo2v atm_vy_1o8jidz atm_e2_1wugsn5 atm_k4_wchqg7 atm_uc_n03lay atm_ui_idpfg4__p88qr9 dir dir-ltr"
+                            src="https://a0.muscache.com/pictures/7630c83f-96a8-4232-9a10-0398661e2e6f.jpg" alt=""
+                            width="24" height="24">
+                    </div>
+                    <span>방</span>
+                </div>
+
+                <div class="nav-item-frame">
+                    <div>
+                        <img class="i181yxiv atm_j3_1osqo2v atm_vy_1o8jidz atm_e2_1wugsn5 atm_k4_wchqg7 atm_uc_n03lay atm_ui_idpfg4__p88qr9 dir dir-ltr"
+                            src="https://a0.muscache.com/pictures/51f5cf64-5821-400c-8033-8a10c7787d69.jpg" alt=""
+                            width="24" height="24">
+                    </div>
+                    <span>한옥</span>
+                </div>
+
+                <div class="nav-item-frame">
+                    <div>
+                        <img src="https://a0.muscache.com/pictures/ca25c7f3-0d1f-432b-9efa-b9f5dc6d8770.jpg" alt=""
+                            width="24" height="24">
+                    </div>
+                    <span>캠핑장</span>
+                </div>
+
+                <div class="nav-item-frame">
+                    <div>
+                        <img src="https://a0.muscache.com/pictures/c0a24c04-ce1f-490c-833f-987613930eca.jpg" alt=""
+                            width="24" height="24">
+                    </div>
+                    <span>국립공원</span>
+                </div>
+
+                <div class="nav-item-frame">
+                    <div>
+                        <img src="https://a0.muscache.com/pictures/3726d94b-534a-42b8-bca0-a0304d912260.jpg" alt=""
+                            width="24" height="24">
+                    </div>
+                    <span>인기 급상승</span>
+                </div>
+
+                <div class="nav-item-frame">
+                    <div>
+                        <img src="https://a0.muscache.com/pictures/957f8022-dfd7-426c-99fd-77ed792f6d7a.jpg" alt=""
+                            width="24" height="24">
+                    </div>
+                    <span>서핑</span>
+                </div>
+
+                <div class="nav-item-frame">
+                    <div>
+                        <img src="https://a0.muscache.com/pictures/687a8682-68b3-4f21-8d71-3c3aef6c1110.jpg" alt=""
+                            width="24" height="24">
+                    </div>
+                    <span>보트</span>
+                </div>
+
+                <div class="nav-item-frame">
+                    <div>
+                        <img src="https://a0.muscache.com/pictures/7ff6e4a1-51b4-4671-bc9a-6f523f196c61.jpg" alt=""
+                            width="24" height="24">
+                    </div>
+                    <span>리아드</span>
+                </div>
+
+
+
+                <div class="nav-item-frame">
+                    <div>
+                        <img src="https://a0.muscache.com/pictures/e4b12c1b-409b-4cb6-a674-7c1284449f6e.jpg" alt=""
+                            width="24" height="24">
+                    </div>
+                    <span>키클라데스 주택</span>
+                </div>
+            </div>
             <div>
-                <button style="padding: 12px 0px;" class="filter-button">
+                <button class="filter-button">
                     <div style="padding: 2px 16px 0px 16px; column-gap: 8px;" class="display-flex">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"
                             style="display:block;fill:none;height:16px;width:16px;stroke:currentColor;stroke-width:3;overflow:visible"
@@ -224,7 +349,7 @@
                                 d="M7 16H3m26 0H15M29 6h-4m-8 0H3m26 20h-4M7 16a4 4 0 1 0 8 0 4 4 0 0 0-8 0zM17 6a4 4 0 1 0 8 0 4 4 0 0 0-8 0zm0 20a4 4 0 1 0 8 0 4 4 0 0 0-8 0zm0 0H3">
                             </path>
                         </svg>
-                        <span class="filter-text">필터</span>
+                        <span class="text-12px">필터</span>
                     </div>
                 </button>
             </div>
@@ -232,141 +357,51 @@
 
     </div>
 
-    <!-- 3번째 div -->
-    <div>
-        <div>
-        </div>
+    <!-- 3번째 div 그리드 사용 -->
+    <div style="padding: 12px 40px 0px 40px; position: relative; z-index: 0;">
+        <button style="padding: none;" class="transparent-button">
+            <div style="padding-bottom: 8px;">
+                <img aria-hidden="true" elementtiming="LCP-target" fetchpriority="high" loading="eager"
+                    src="https://a0.muscache.com/im/pictures/miso/Hosting-26300485/original/ee94e6c1-6ebc-496e-af84-1502edd1b759.jpeg?im_w=720"
+                    data-original-uri="https://a0.muscache.com/im/pictures/miso/Hosting-26300485/original/ee94e6c1-6ebc-496e-af84-1502edd1b759.jpeg?im_w=720"
+                    style="width: 300px; height: 300px" class="round-image">
+
+            </div>
+            <div class="flex-vertical-row-align">
+                <div>
+                    <span class="text-16px">영국 그레이터 런던</span>
+                </div>
+                <div>
+                    <span><svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24">
+                            <path
+                                d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279-7.416-3.967-7.417 3.967 1.481-8.279-6.064-5.828 8.332-1.151z" />
+                        </svg></span>
+                    <span class="text-14px">4.83</span>
+                </div>
+            </div>
+            <div class="text-16px-grey text-align-left">
+                <span>호스트: Amella 님 · 호스팅 경력 6년</span>
+            </div>
+            <div style="padding-bottom: 8px;" class="text-14px-grey text-align-left">
+                <span>2월 14일~19일</span>
+            </div>
+            <div class="text-align-left">
+                <span class="text-16px">₩96,825</span>
+                <span class="text-16px-grey">/박</span>
+            </div>
+            
+        </button>
+        <button class="transparent-button heart-button">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" role="presentation"
+                focusable="false"
+                style="display: block; fill: rgba(0, 0, 0, 0.5); height: 24px; width: 24px; stroke: var(--f-mkcy-f); stroke-width: 2; overflow: visible;">
+                <path
+                    d="M16 28c7-4.73 14-10 14-17a6.98 6.98 0 0 0-7-7c-1.8 0-3.58.68-4.95 2.05L16 8.1l-2.05-2.05a6.98 6.98 0 0 0-9.9 0A6.98 6.98 0 0 0 2 11c0 7 7 12.27 14 17z">
+                </path>
+            </svg>
+        </button>
     </div>
-
-
 </body>
 
 </html>
-
-<!-- <div class="nav-item-frame">
-    <div>
-        <img src="https://a0.muscache.com/pictures/3b1eb541-46d9-4bef-abc4-c37d77e3c21b.jpg" alt=""
-            width="24" height="24">
-    </div>
-    <div>
-        <span>최고의 전망</span>
-    </div>
-    
-</div>
-
-<div class="nav-item-frame">
-    <div>
-        <img class="i181yxiv atm_j3_1osqo2v atm_vy_1o8jidz atm_e2_1wugsn5 atm_k4_wchqg7 atm_uc_n03lay atm_ui_idpfg4__p88qr9 dir dir-ltr"
-            src="https://a0.muscache.com/pictures/3271df99-f071-4ecf-9128-eb2d2b1f50f0.jpg" alt=""
-            width="24" height="24">
-    </div>
-    <span>초소형 주택</span>
-</div>
-
-<div class="nav-item-frame">
-    <div>
-        <img class="i181yxiv atm_j3_1osqo2v atm_vy_1o8jidz atm_e2_1wugsn5 atm_k4_wchqg7 atm_uc_n03lay atm_ui_idpfg4__p88qr9 dir dir-ltr"
-            src="https://a0.muscache.com/pictures/10ce1091-c854-40f3-a2fb-defc2995bcaf.jpg" alt=""
-            width="24" height="24">
-    </div>
-    <span>해변 근처</span>
-</div>
-
-<div class="nav-item-frame">
-    <div>
-        <img class="i181yxiv atm_j3_1osqo2v atm_vy_1o8jidz atm_e2_1wugsn5 atm_k4_wchqg7 atm_uc_n03lay atm_ui_idpfg4__p88qr9 dir dir-ltr"
-            src="https://a0.muscache.com/pictures/aaa02c2d-9f0d-4c41-878a-68c12ec6c6bd.jpg" alt=""
-            width="24" height="24">
-    </div>
-    <span>농장</span>
-</div>
-
-<div class="nav-item-frame">
-    <div>
-        <img class="i181yxiv atm_j3_1osqo2v atm_vy_1o8jidz atm_e2_1wugsn5 atm_k4_wchqg7 atm_uc_n03lay atm_ui_idpfg4__p88qr9 dir dir-ltr"
-            src="https://a0.muscache.com/pictures/c8bba3ed-34c0-464a-8e6e-27574d20e4d2.jpg" alt=""
-            width="24" height="24">
-    </div>
-    <span>스키</span>
-</div>
-
-<div class="nav-item-frame">
-    <div>
-        <img class="i181yxiv atm_j3_1osqo2v atm_vy_1o8jidz atm_e2_1wugsn5 atm_k4_wchqg7 atm_uc_n03lay atm_ui_idpfg4__p88qr9 dir dir-ltr"
-            src="https://a0.muscache.com/pictures/7630c83f-96a8-4232-9a10-0398661e2e6f.jpg" alt=""
-            width="24" height="24">
-    </div>
-    <span>방</span>
-</div>
-
-<div class="nav-item-frame">
-    <div>
-        <img class="i181yxiv atm_j3_1osqo2v atm_vy_1o8jidz atm_e2_1wugsn5 atm_k4_wchqg7 atm_uc_n03lay atm_ui_idpfg4__p88qr9 dir dir-ltr"
-            src="https://a0.muscache.com/pictures/51f5cf64-5821-400c-8033-8a10c7787d69.jpg" alt=""
-            width="24" height="24">
-    </div>
-    <span>한옥</span>
-</div>
-
-<div class="nav-item-frame">
-    <div>
-        <img src="https://a0.muscache.com/pictures/ca25c7f3-0d1f-432b-9efa-b9f5dc6d8770.jpg" alt="" width="24" height="24">
-    </div>
-    <span>캠핑장</span>
-</div>
-
-<div class="nav-item-frame">
-    <div>
-        <img src="https://a0.muscache.com/pictures/c0a24c04-ce1f-490c-833f-987613930eca.jpg" alt="" width="24" height="24">
-    </div>
-    <span>국립공원</span>
-</div>
-
-<div class="nav-item-frame">
-    <div>
-        <img src="https://a0.muscache.com/pictures/3726d94b-534a-42b8-bca0-a0304d912260.jpg" alt="" width="24" height="24">
-    </div>
-    <span>인기 급상승</span>
-</div>
-
-<div class="nav-item-frame">
-    <div>
-        <img src="https://a0.muscache.com/pictures/957f8022-dfd7-426c-99fd-77ed792f6d7a.jpg" alt="" width="24" height="24">
-    </div>
-    <span>서핑</span>
-</div>
-
-<div class="nav-item-frame">
-    <div>
-        <img src="https://a0.muscache.com/pictures/687a8682-68b3-4f21-8d71-3c3aef6c1110.jpg" alt="" width="24" height="24">
-    </div>
-    <span>보트</span>
-</div>
-
-<div class="nav-item-frame">
-    <div>
-        <img src="https://a0.muscache.com/pictures/7ff6e4a1-51b4-4671-bc9a-6f523f196c61.jpg" alt="" width="24" height="24">
-    </div>
-    <span>리아드</span>
-</div>
-
-<div class="nav-item-frame">
-    <div>
-        <img src="https://a0.muscache.com/pictures/d721318f-4752-417d-b4fa-77da3cbc3269.jpg" alt="" width="24" height="24">
-    </div>
-    <span>타워</span>
-</div>
-
-<div class="nav-item-frame">
-    <div>
-        <img src="https://a0.muscache.com/pictures/8eccb972-4bd6-43c5-ac83-27822c0d3dcd.jpg" alt="" width="24" height="24">
-    </div>
-    <span>그랜드 피아노</span>
-</div>
-
-<div class="nav-item-frame">
-    <div>
-        <img src="https://a0.muscache.com/pictures/e4b12c1b-409b-4cb6-a674-7c1284449f6e.jpg" alt="" width="24" height="24">
-    </div>
-    <span>키클라데스 주택</span>
-</div> -->
+<!--  -->
