--- a/index.html
+++ b/index.html
@@ -358,45 +358,45 @@
     </div>
 
     <!-- 3번째 div 그리드 사용 -->
-    <div class="grid-container">
+    <div class="list-grid-container">
         <div style="position: relative; z-index: 0;">
-            <button style="padding: none;" class="transparent-button">
-                <div style="padding-bottom: 8px;">
+            <a href="https://www.airbnb.co.kr/rooms/26300485?adults=1&category_tag=Tag%3A8678&children=0&enable_m3_private_room=true&infants=0&pets=0&photo_id=1610140890&search_mode=flex_destinations_search&check_in=2024-02-16&check_out=2024-02-21&source_impression_id=p3_1708063150_hLtFDqlHTxn5eE8i&previous_page_section_name=1000&federated_search_id=630ee33b-d0f4-4ee5-b2ee-085d05d7d5be"
+                style="padding: none; display: inline-block; width: 100%;" class="transparent-button">
+                <div style="padding-bottom: 8px;" class="img-wrapper">
                     <img aria-hidden="true" elementtiming="LCP-target" fetchpriority="high" loading="eager"
                         src="https://a0.muscache.com/im/pictures/miso/Hosting-26300485/original/ee94e6c1-6ebc-496e-af84-1502edd1b759.jpeg?im_w=720"
                         data-original-uri="https://a0.muscache.com/im/pictures/miso/Hosting-26300485/original/ee94e6c1-6ebc-496e-af84-1502edd1b759.jpeg?im_w=720"
-                        style="width: 300px; height: 300px" class="round-image">
-
+                            class="round-image">
                 </div>
-                <div class="flex-vertical-row-align">
+                <div style="max-width: 100%;" class="list-explanation-grid-container">
                     <div>
-                        <span class="text-16px">영국 그레이터 런던</span>
+                        <span class="text-15px list-explanation-grid-item">영국 그레이터 런던</span>
                     </div>
-                    <div>
-                        <span><svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24">
-                                <path
-                                    d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279-7.416-3.967-7.417 3.967 1.481-8.279-6.064-5.828 8.332-1.151z" />
-                            </svg></span>
-                        <span class="text-14px">4.83</span>
+                    <div class="text-15px-grey text-align-left list-explanation-grid-item">
+                        <span>호스트: Amella 님 · 호스팅 경력 6년</span>
+                    </div>
+                    <div style="padding-bottom: 8px;" class="text-15px-grey text-align-left list-explanation-grid-item">
+                        <span>2월 14일~19일</span>
+                    </div>
+                    <div class="text-align-left list-explanation-grid-item">
+                        <span class="text-15px">₩96,825</span>
+                        <span class="text-15px-grey">/박</span>
+                    </div>
+                    <div style="text-align: right;" class="text-15px-400 list-explanation-grid-item">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24">
+                            <path
+                                d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279-7.416-3.967-7.417 3.967 1.481-8.279-6.064-5.828 8.332-1.151z" />
+                        </svg>
+                        <span>4.83</span>
                     </div>
                 </div>
-                <div class="text-16px-grey text-align-left">
-                    <span>호스트: Amella 님 · 호스팅 경력 6년</span>
-                </div>
-                <div style="padding-bottom: 8px;" class="text-14px-grey text-align-left">
-                    <span>2월 14일~19일</span>
-                </div>
-                <div class="text-align-left">
-                    <span class="text-16px">₩96,825</span>
-                    <span class="text-16px-grey">/박</span>
-                </div>
+            </a>
 
-            </button>
             <button class="transparent-button heart-button">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" role="presentation"
                     focusable="false"
                     style="display: block; fill: rgba(0, 0, 0, 0.5); height: 24px; width: 24px; stroke: var(--f-mkcy-f); stroke-width: 2; overflow: visible;">
-                    <path
+                    <path style="stroke: white;"
                         d="M16 28c7-4.73 14-10 14-17a6.98 6.98 0 0 0-7-7c-1.8 0-3.58.68-4.95 2.05L16 8.1l-2.05-2.05a6.98 6.98 0 0 0-9.9 0A6.98 6.98 0 0 0 2 11c0 7 7 12.27 14 17z">
                     </path>
                 </svg>
