Design: reactive grid

--- a/index.html
+++ b/index.html
@@ -373,7 +373,8 @@
                         <span class="text-15px list-explanation-grid-item">영국 그레이터 런던</span>
                     </div>
                     <div class="text-15px-grey text-align-left list-explanation-grid-item">
-                        <span>호스트: Amella 님 · 호스팅 경력 6년</span>
+                        <span>호스트: Amella 님</span>
+                        <span> · 호스팅 경력 6년</span>
                     </div>
                     <div style="padding-bottom: 8px;" class="text-15px-grey text-align-left list-explanation-grid-item">
                         <span>2월 14일~19일</span>
