--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div style="height: 64px;" class="display-flex">
                 <div class="flex-vertical-row-align block-row-center">
                     <button id="head-button">
-                        <span class="text-16px">에어비엔비에서 사랑받고 있는 '게스트 선호' 숙소에 대해 알아보기</span>
+                        <span class="text-16px-600">에어비엔비에서 사랑받고 있는 '게스트 선호' 숙소에 대해 알아보기</span>
                     </button>
                 </div>
             </div>
@@ -163,7 +163,7 @@
                 <div style="margin: 8px;" class="flex-vertical-row-align">
                     <div style="padding: 12px;" class="highlight-grey">
                         <a href="https://www.airbnb.co.kr/host/homes">
-                            <span class="text-14px">당신의 공간을 에어비엔비하세요</span>
+                            <span class="text-14px-600">당신의 공간을 에어비엔비하세요</span>
                         </a>
 
                     </div>
@@ -349,7 +349,7 @@
                                 d="M7 16H3m26 0H15M29 6h-4m-8 0H3m26 20h-4M7 16a4 4 0 1 0 8 0 4 4 0 0 0-8 0zM17 6a4 4 0 1 0 8 0 4 4 0 0 0-8 0zm0 20a4 4 0 1 0 8 0 4 4 0 0 0-8 0zm0 0H3">
                             </path>
                         </svg>
-                        <span class="text-12px">필터</span>
+                        <span class="text-12px-600">필터</span>
                     </div>
                 </button>
             </div>
@@ -359,29 +359,29 @@
 
     <!-- 3번째 div 그리드 사용 -->
     <div class="list-grid-container">
-        <div style="position: relative; z-index: 0;">
+        <div class="relative">
             <a href="https://www.airbnb.co.kr/rooms/26300485?adults=1&category_tag=Tag%3A8678&children=0&enable_m3_private_room=true&infants=0&pets=0&photo_id=1610140890&search_mode=flex_destinations_search&check_in=2024-02-16&check_out=2024-02-21&source_impression_id=p3_1708063150_hLtFDqlHTxn5eE8i&previous_page_section_name=1000&federated_search_id=630ee33b-d0f4-4ee5-b2ee-085d05d7d5be"
                 style="padding: none; display: inline-block; width: 100%;" class="transparent-button">
-                <div style="padding-bottom: 8px;" class="img-wrapper">
+                <div class="img-wrapper">
                     <img aria-hidden="true" elementtiming="LCP-target" fetchpriority="high" loading="eager"
                         src="https://a0.muscache.com/im/pictures/miso/Hosting-26300485/original/ee94e6c1-6ebc-496e-af84-1502edd1b759.jpeg?im_w=720"
                         data-original-uri="https://a0.muscache.com/im/pictures/miso/Hosting-26300485/original/ee94e6c1-6ebc-496e-af84-1502edd1b759.jpeg?im_w=720"
-                            class="round-image">
+                        class="round-image">
                 </div>
-                <div style="max-width: 100%;" class="list-explanation-grid-container">
-                    <div>
-                        <span class="text-15px list-explanation-grid-item">영국 그레이터 런던</span>
+                <div class="list-explanation-grid-container">
+                    <div class="text-align-left text-15px-600 list-explanation-grid-item">
+                        <span>영국 그레이터 런던</span>
                     </div>
-                    <div class="text-15px-grey text-align-left list-explanation-grid-item">
+                    <div class="text-15px-400-grey list-explanation-grid-item">
                         <span>호스트: Amella 님</span>
                         <span> · 호스팅 경력 6년</span>
                     </div>
-                    <div style="padding-bottom: 8px;" class="text-15px-grey text-align-left list-explanation-grid-item">
+                    <div class="text-15px-400-grey list-explanation-grid-item">
                         <span>2월 14일~19일</span>
                     </div>
                     <div class="text-align-left list-explanation-grid-item">
-                        <span class="text-15px">₩96,825</span>
-                        <span class="text-15px-grey">/박</span>
+                        <span class="text-15px-600">₩96,825</span>
+                        <span class="text-15px-400-grey">/박</span>
                     </div>
                     <div style="text-align: right;" class="text-15px-400 list-explanation-grid-item">
                         <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24">
@@ -392,11 +392,10 @@
                     </div>
                 </div>
             </a>
-
             <button class="transparent-button heart-button">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" role="presentation"
                     focusable="false"
-                    style="display: block; fill: rgba(0, 0, 0, 0.5); height: 24px; width: 24px; stroke: var(--f-mkcy-f); stroke-width: 2; overflow: visible;">
+                    style="display: block; height: 24px; width: 24px; stroke: var(--f-mkcy-f); stroke-width: 2; overflow: visible;">
                     <path style="stroke: white;"
                         d="M16 28c7-4.73 14-10 14-17a6.98 6.98 0 0 0-7-7c-1.8 0-3.58.68-4.95 2.05L16 8.1l-2.05-2.05a6.98 6.98 0 0 0-9.9 0A6.98 6.98 0 0 0 2 11c0 7 7 12.27 14 17z">
                     </path>
