Design: body padding

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 
 
-        <div style=" padding: 0 40px; height: 168px;" class="space-between relative grey-border">
+        <div style="height: 168px;" class="space-between relative grey-border page-padding">
             <!-- airbnb 로고 div -->
             <div style="height: 80px;" class="flex-start z-index1 flex-grow-shrink-10">
                 <a href="https://www.airbnb.co.kr/" class="flex-vertical-column-align">
@@ -204,16 +204,13 @@
                             </svg>
                         </div>
                     </button>
-
                 </div>
             </div>
         </div>
-
-
     </div>
 
     <!-- 2번째 div -->
-    <div style="padding: 12px 40px 0px 40px;">
+    <div style="padding-top: 12px" class="page-padding">
         <div style="height: 78px; width: 100%;" class="flex-vertical-row-align">
             <div style="column-gap: 32px;" class="flex-vertical-row-align">
                 <div class="nav-item-frame">
@@ -358,7 +355,7 @@
     </div>
 
     <!-- 3번째 div 그리드 사용 -->
-    <div class="list-grid-container">
+    <div class="list-grid-container page-padding">
         <div class="relative">
             <a href="https://www.airbnb.co.kr/rooms/26300485?adults=1&category_tag=Tag%3A8678&children=0&enable_m3_private_room=true&infants=0&pets=0&photo_id=1610140890&search_mode=flex_destinations_search&check_in=2024-02-16&check_out=2024-02-21&source_impression_id=p3_1708063150_hLtFDqlHTxn5eE8i&previous_page_section_name=1000&federated_search_id=630ee33b-d0f4-4ee5-b2ee-085d05d7d5be"
                 style="padding: none; display: inline-block; width: 100%;" class="transparent-button">
