--- a/index.html
+++ b/index.html
@@ -768,6 +768,18 @@
 
 
     </div>
+
+    <div style="margin: 56px 0px; text-align: center;">
+        <div>
+            <span class="text-18px-600">최고의 전망 카테고리 계속 검색하기</span>
+        </div>
+        <div style="margin-top: 16px;">
+            <button class="search-more-button">
+                <span>더 보기</span>
+            </button>
+        </div>
+        
+    </div>
 </body>
 
 </html>
