Design: Recommended travel destination's head

--- a/index.html
+++ b/index.html
@@ -769,7 +769,7 @@
 
     </div>
 
-    <div style="margin: 56px 0px; text-align: center;">
+    <div style="margin: 56px 0px; text-align: center;" class="page-padding">
         <div>
             <span class="text-18px-600">최고의 전망 카테고리 계속 검색하기</span>
         </div>
@@ -778,7 +778,49 @@
                 <span>더 보기</span>
             </button>
         </div>
-        
+
+    </div>
+
+    <div style="padding-top: 48px; padding-bottom: 48px; background-color: rgb(244, 244, 244);" class="page-padding">
+        <div style="font-size: 22px; font-weight: 600;">
+            <span>다음 여행을 위한 추천 여행지</span>
+        </div>
+        <div style="margin-top: 8px;" class="flex-left-align">
+            <button>
+                <span>인기</span>
+            </button>
+            <button>
+                <span>예술 및 문화</span>
+            </button>
+            <button>
+                <span>야외</span>
+            </button>
+            <button>
+                <span>산맥</span>
+            </button>
+            <button>
+                <span>해변</span>
+            </button>
+            <button>
+                <span>카테고리</span>
+            </button>
+            <button>
+                <span>즐길거리</span>
+            </button>
+        </div>
+        <div class="short-grey-boundary"></div>
+        <div class="recommand-list-grid-container">
+            <div>
+                <button>
+                    <div>
+                        <span>캔모어</span>
+                    </div>
+                    <div>
+                        <span>휴가지 숙소</span>
+                    </div>
+                </button>
+            </div>
+        </div>
     </div>
 </body>
 
