Design: recommanded trip categories with grid

--- a/index.html
+++ b/index.html
@@ -809,18 +809,111 @@
             </button>
         </div>
         <div class="short-grey-boundary"></div>
-        <div class="recommand-list-grid-container">
-            <div>
-                <button>
-                    <div>
-                        <span>캔모어</span>
-                    </div>
-                    <div>
-                        <span>휴가지 숙소</span>
-                    </div>
-                </button>
-            </div>
-        </div>
+        <ul class="recommand-list-grid-container">
+            <li>
+                <a href="https://www.airbnb.co.kr/canmore-canada/stays">
+                    <span>캔모어</span>
+                    <span>휴가지 숙소</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.airbnb.co.kr/benalmadena-spain/stays/apartments">
+                    <span>베날마데나</span>
+                    <span>아파트 숙소</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.airbnb.co.kr/marbella-spain/stays/beach-houses">
+                    <span>마르베야</span>
+                    <span>해변 근처 독채 숙소</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.airbnb.co.kr/mijas-spain/stays/houses">
+                    <span>미하스</span>
+                    <span>독채 숙소</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.airbnb.co.kr/prescott-az/stays/cottages">
+                    <span>프레스콧</span>
+                    <span>별장 숙소</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.airbnb.co.kr/scottsdale-az/stays/mansions">
+                    <span>스캇츠데일</span>
+                    <span>대저택 숙소</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.airbnb.co.kr/tucson-az/stays/pools">
+                    <span>투손</span>
+                    <span>수영장이 있는 숙소</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.airbnb.co.kr/jasper-ar/stays">
+                    <span>요스퍼</span>
+                    <span>휴가지 숙소</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.airbnb.co.kr/mountain-view-ar/stays/houses">
+                    <span>마운틴뷰</span>
+                    <span>독채 숙소</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.airbnb.co.kr/devonport-australia/stays">
+                    <span>Devonport</span>
+                    <span>휴가지 숙소</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.airbnb.co.kr/mallacoota-australia/stays/beach-houses">
+                    <span>Mallacoota</span>
+                    <span>해변 근처 독채 숙소</span>
+                </a>
+            </li>
+
+            <li>
+                <a href="https://www.airbnb.co.kr/ibiza-spain/stays">
+                    <span>이비자</span>
+                    <span>휴가지 숙소</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.airbnb.co.kr/anaheim-ca/stays">
+                    <span>애나하임</span>
+                    <span>휴가지 숙소</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.airbnb.co.kr/monterey-ca/stays/condos">
+                    <span>몬터레이</span>
+                    <span>콘도 숙소</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.airbnb.co.kr/paso-robles-ca/stays">
+                    <span>파소 로블레스</span>
+                    <span>휴가지 숙소</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.airbnb.co.kr/santa-barbara-ca/stays/houses">
+                    <span>산타바바라</span>
+                    <span>독채 숙소</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.airbnb.co.kr/sonoma-ca/stays/cottages">
+                    <span>소노마</span>
+                    <span>별장 숙소</span>
+                </a>
+            </li>
+        </ul>
     </div>
 </body>
 
