Design: upper of footer

--- a/index.html
+++ b/index.html
@@ -781,7 +781,7 @@
 
     </div>
 
-    <div style="padding-top: 48px; padding-bottom: 48px; background-color: rgb(244, 244, 244);" class="page-padding">
+    <div style="padding-top: 48px; padding-bottom: 48px; background-color: rgb(247, 247, 247);" class="page-padding">
         <div style="font-size: 22px; font-weight: 600;">
             <span>다음 여행을 위한 추천 여행지</span>
         </div>
@@ -915,6 +915,138 @@
             </li>
         </ul>
     </div>
+    <div class="short-grey-boundary"></div>
+    <div style="background-color: rgb(247, 247, 247);" class="page-padding">
+        <footer class="footer-upper-grid-container">
+            <section>
+                <div>
+                    <div style="text-align: left; margin-bottom: 12px;" class="text-14px-600">
+                        <span>에어비엔비 지원</span>
+                    </div>
+                    <ul class="text-14px-400 footer-upper-list-grid-container">
+                        <li>
+                            <a href="https://www.airbnb.co.kr/help">도움말 센터</a>
+                        </li>
+                        <li>
+                            <a href="https://www.airbnb.co.kr/help/article/3218">에어커버</a>
+                        </li>
+                        <li>
+                            <a href="https://www.airbnb.co.kr/against-discrimination">차별 반대</a>
+                        </li>
+                        <li>
+                            <a href="https://www.airbnb.co.kr/accessibility">장애인 지원</a>
+                        </li>
+                        <li>
+                            <a href="https://www.airbnb.co.kr/help/article/2701">예약 취소 옵션</a>
+                        </li>
+                        <li>
+                            <a href="https://www.airbnb.co.kr/help/article/3290">이웃 민원 신고</a>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+
+            <section>
+                <div>
+                    <div style="text-align: left; margin-bottom: 12px;" class="text-14px-600">
+                        <span>호스팅</span>
+                    </div>
+                    <ul class="text-14px-400 footer-upper-list-grid-container">
+                        <li>
+                            <a href="https://www.airbnb.co.kr/host/homes?from_footer=1">당신의 공간을 에어비엔비하세요</a>
+                        </li>
+                        <li>
+                            <a href="https://www.airbnb.co.kr/aircover-for-hosts">호스트를 위한 에어커버</a>
+                        </li>
+                        <li>
+                            <a href="https://www.airbnb.co.kr/resources/hosting-homes">호스팅 자료</a>
+                        </li>
+                        <li>
+                            <a href="https://community.withairbnb.com/t5/custom/page/page-id/CommunityCenterNotFound">커뮤니티
+                                포럼</a>
+                        </li>
+                        <li>
+                            <a href="https://www.airbnb.co.kr/help/article/1387">책임감 있는 호스팅</a>
+                        </li>
+                        <li>
+                            <a href="https://www.airbnb.co.kr/ambassadors/joinaclass">무료 호스팅 클래스 참여하기</a>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+
+            <section>
+                <div>
+                    <div style="text-align: left; margin-bottom: 12px;" class="text-14px-600">
+                        <span>에어비엔비</span>
+                    </div>
+                    <ul class="text-14px-400 footer-upper-list-grid-container">
+                        <li>
+                            <a href="https://news.airbnb.com/">뉴스룸</a>
+                        </li>
+                        <li>
+                            <a href="https://www.airbnb.co.kr/release">새로운 기능</a>
+                        </li>
+                        <li>
+                            <a href="https://careers.airbnb.com/">채용정보</a>
+                        </li>
+                        <li>
+                            <a href="https://investors.airbnb.com/home/default.aspx">투자자 정보</a>
+                        </li>
+                        <li>
+                            <a href="https://ko.airbnb.org/?_set_bev_on_new_domain=1709362214_ZTZjZDY4M2QyYjFi">Airbnb
+                                긴급 숙소</a>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+        </footer>
+        <div class="short-grey-boundary"></div>
+    </div>
+
+    <div style="background-color: rgb(247, 247, 247); padding-top: 24px; padding-bottom: 24px;" class="page-padding">
+        <div class="flex-vertical-row-align">
+            <div>
+                <div class="text-14px-400">
+                    <span>© 2024 Airbnb, Inc.</span>
+                    <span>·</span>
+                </div>
+                <ul>
+                    <li>
+                        <a href="https://www.airbnb.co.kr/help/article/2855">개인정보 처리방침</a>
+                        <span>·</span>
+                    </li>
+                    <li>
+                        <a href="https://www.airbnb.co.kr/help/article/2908">이용약관</a>
+                        <span>·</span>
+                    </li>
+                    <li>
+                        <a href="https://www.airbnb.co.kr/">사이트맵</a>
+                        <span>·</span>
+                    </li>
+                    <li>
+                        <a
+                            href="https://www.airbnb.co.kr/home/updated_cancellation_policies?korean_strict_policy=true#strict">한국의
+                            변경된 환불 정책</a>
+                        <span>·</span>
+                    </li>
+                    <li>
+                        <a href="https://www.airbnb.co.kr/about/company-details">회사 세부정보</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div style="margin: 8px 0px;" class="short-grey-boundary"></div>
+        <div style="font-size: 10px; color: rgb(113, 113, 113); letter-spacing: 0.2px;">웹사이트 제공자: Airbnb Ireland UC,
+            private unlimited company, 8 Hanover Quay Dublin 2,
+            D02 DP23 Ireland | 이사: Dermot Clarke, Killian Pattwell, Andrea Finnegan | VAT 번호:
+            IE9827384L | 사업자 등록 번호: IE 511825 | 연락처: terms@airbnb.com, 웹사이트,
+            080-822-0230 | 호스팅 서비스 제공업체: 아마존 웹서비스 | 에어비앤비는 통신판매 중개자로
+            에어비앤비 플랫폼을 통하여 게스트와 호스트 사이에 이루어지는 통신판매의 당사자가 아닙니다.
+            에어비앤비 플랫폼을 통하여 예약된 숙소, 체험, 호스트 서비스에 관한 의무와 책임은 해당
+            서비스를 제공하는 호스트에게 있습니다.</div>
+    </div>
+
 </body>
 
 </html>
