--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" sizes="76x76" type="image/x-icon"
         href="https://a0.muscache.com/airbnb/static/logotype_favicon-21cc8e6c6a2cca43f061d2dcabdf6e58.ico">
     <title>에어비엔비</title>
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="index.css ">
 </head>
 
 <body>
@@ -781,7 +781,7 @@
 
     </div>
 
-    <div style="padding-top: 48px; padding-bottom: 48px; background-color: rgb(244, 244, 244);" class="page-padding">
+    <div style="padding-top: 48px; padding-bottom: 48px; background-color: rgb(247, 247, 247);" class="page-padding">
         <div style="font-size: 22px; font-weight: 600;">
             <span>다음 여행을 위한 추천 여행지</span>
         </div>
@@ -915,6 +915,229 @@
             </li>
         </ul>
     </div>
+    <div class="short-grey-boundary"></div>
+    <div style="background-color: rgb(247, 247, 247);" class="page-padding">
+        <footer class="footer-upper-grid-container">
+            <section>
+                <div>
+                    <div style="text-align: left; margin-bottom: 12px;" class="text-14px-600">
+                        <span>에어비엔비 지원</span>
+                    </div>
+                    <ul class="text-14px-400 footer-upper-list-grid-container">
+                        <li>
+                            <a href="https://www.airbnb.co.kr/help">도움말 센터</a>
+                        </li>
+                        <li>
+                            <a href="https://www.airbnb.co.kr/help/article/3218">에어커버</a>
+                        </li>
+                        <li>
+                            <a href="https://www.airbnb.co.kr/against-discrimination">차별 반대</a>
+                        </li>
+                        <li>
+                            <a href="https://www.airbnb.co.kr/accessibility">장애인 지원</a>
+                        </li>
+                        <li>
+                            <a href="https://www.airbnb.co.kr/help/article/2701">예약 취소 옵션</a>
+                        </li>
+                        <li>
+                            <a href="https://www.airbnb.co.kr/help/article/3290">이웃 민원 신고</a>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+
+            <section>
+                <div>
+                    <div style="text-align: left; margin-bottom: 12px;" class="text-14px-600">
+                        <span>호스팅</span>
+                    </div>
+                    <ul class="text-14px-400 footer-upper-list-grid-container">
+                        <li>
+                            <a href="https://www.airbnb.co.kr/host/homes?from_footer=1">당신의 공간을 에어비엔비하세요</a>
+                        </li>
+                        <li>
+                            <a href="https://www.airbnb.co.kr/aircover-for-hosts">호스트를 위한 에어커버</a>
+                        </li>
+                        <li>
+                            <a href="https://www.airbnb.co.kr/resources/hosting-homes">호스팅 자료</a>
+                        </li>
+                        <li>
+                            <a href="https://community.withairbnb.com/t5/custom/page/page-id/CommunityCenterNotFound">커뮤니티
+                                포럼</a>
+                        </li>
+                        <li>
+                            <a href="https://www.airbnb.co.kr/help/article/1387">책임감 있는 호스팅</a>
+                        </li>
+                        <li>
+                            <a href="https://www.airbnb.co.kr/ambassadors/joinaclass">무료 호스팅 클래스 참여하기</a>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+
+            <section>
+                <div>
+                    <div style="text-align: left; margin-bottom: 12px;" class="text-14px-600">
+                        <span>에어비엔비</span>
+                    </div>
+                    <ul class="text-14px-400 footer-upper-list-grid-container">
+                        <li>
+                            <a href="https://news.airbnb.com/">뉴스룸</a>
+                        </li>
+                        <li>
+                            <a href="https://www.airbnb.co.kr/release">새로운 기능</a>
+                        </li>
+                        <li>
+                            <a href="https://careers.airbnb.com/">채용정보</a>
+                        </li>
+                        <li>
+                            <a href="https://investors.airbnb.com/home/default.aspx">투자자 정보</a>
+                        </li>
+                        <li>
+                            <a href="https://ko.airbnb.org/?_set_bev_on_new_domain=1709362214_ZTZjZDY4M2QyYjFi">Airbnb
+                                긴급 숙소</a>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+        </footer>
+        <div class="short-grey-boundary"></div>
+    </div>
+
+    <div style="background-color: rgb(247, 247, 247); padding-top: 24px; padding-bottom: 24px;" class="page-padding">
+        <div class="flex-vertical-row-align">
+            <div>
+                <div style="display: inline-block;" class="text-14px-400">
+                    <span>© 2024 Airbnb, Inc.</span>
+                    <span>·</span>
+                </div>
+                <ul style="display: inline-flex; flex-direction: row; align-items: flex-start;" class="text-14px-400">
+                    <li>
+                        <a class="hover-underline" href="https://www.airbnb.co.kr/help/article/2855">개인정보 처리방침</a>
+                        <span style="margin-right: 5px;">·</span>
+                    </li>
+                    <li>
+                        <a class="hover-underline" href="https://www.airbnb.co.kr/help/article/2908">이용약관</a>
+                        <span style="margin-right: 5px;">·</span>
+                    </li>
+                    <li>
+                        <a class="hover-underline" href="https://www.airbnb.co.kr/">사이트맵</a>
+                        <span style="margin-right: 5px;">·</span>
+                    </li>
+                    <li>
+                        <a class="hover-underline"
+                            href="https://www.airbnb.co.kr/home/updated_cancellation_policies?korean_strict_policy=true#strict">한국의
+                            변경된 환불 정책</a>
+                        <span style="margin-right: 5px;">·</span>
+                    </li>
+                    <li>
+                        <a class="hover-underline" href="https://www.airbnb.co.kr/about/company-details">회사 세부정보</a>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <div style="display: inline-block;">
+                    <button style="display: inline-flex; margin-right: 24px;" class="transparent-button flex-vertical-row-align">
+                        <span style="width: fit-content; margin-right: 8px; vertical-align: center;">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" aria-hidden="true"
+                                role="presentation" focusable="false"
+                                style="display: block; height: 16px; width: 16px; fill: currentcolor;">
+                                <path
+                                    d="M8 .25a7.77 7.77 0 0 1 7.75 7.78 7.75 7.75 0 0 1-7.52 7.72h-.25A7.75 7.75 0 0 1 .25 8.24v-.25A7.75 7.75 0 0 1 8 .25zm1.95 8.5h-3.9c.15 2.9 1.17 5.34 1.88 5.5H8c.68 0 1.72-2.37 1.93-5.23zm4.26 0h-2.76c-.09 1.96-.53 3.78-1.18 5.08A6.26 6.26 0 0 0 14.17 9zm-9.67 0H1.8a6.26 6.26 0 0 0 3.94 5.08 12.59 12.59 0 0 1-1.16-4.7l-.03-.38zm1.2-6.58-.12.05a6.26 6.26 0 0 0-3.83 5.03h2.75c.09-1.83.48-3.54 1.06-4.81zm2.25-.42c-.7 0-1.78 2.51-1.94 5.5h3.9c-.15-2.9-1.18-5.34-1.89-5.5h-.07zm2.28.43.03.05a12.95 12.95 0 0 1 1.15 5.02h2.75a6.28 6.28 0 0 0-3.93-5.07z">
+                                </path>
+                            </svg>
+                        </span>
+                        <span class="text-14px-600 hover-underline">한국어(KR)</span>
+                    </button>
+                    <button class="transparent-button">
+                        <span class="text-16px-600">₩</span>
+                        <span class="hover-underline text-14px-600">KRW</span>
+                    </button>
+                </div>
+                <ul style="display: inline-flex; margin-left: 24px; vertical-align: center;">
+                    <li style="margin-right: 16px;">
+                        <a href="https://www.facebook.com/AirbnbKorea">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-label="페이스북으로 이동하기"
+                                role="img" focusable="false"
+                                style="display: block; height: 18px; width: 18px; fill: currentcolor;">
+                                <path d="M30 0a2 2 0 0 1 2 2v28a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2z">
+                                </path>
+                                <path fill="#fff"
+                                    d="M22.94 16H18.5v-3c0-1.27.62-2.5 2.6-2.5h2.02V6.56s-1.83-.31-3.58-.31c-3.65 0-6.04 2.21-6.04 6.22V16H9.44v4.62h4.06V32h5V20.62h3.73z">
+                                </path>
+                            </svg>
+                        </a>
+                    </li>
+                    <li style="margin-right: 16px;">
+                        <a href="https://twitter.com/airbnb">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-label="트위터로 이동하기"
+                                role="img" focusable="false"
+                                style="display: block; height: 18px; width: 18px; fill: currentcolor;">
+                                <path d="M32 4v24a4 4 0 0 1-4 4H4a4 4 0 0 1-4-4V4a4 4 0 0 1 4-4h24a4 4 0 0 1 4 4z">
+                                </path>
+                                <path fill="#fff"
+                                    d="M18.66 7.99a4.5 4.5 0 0 0-2.28 4.88A12.31 12.31 0 0 1 7.3 8.25a4.25 4.25 0 0 0 1.38 5.88c-.69 0-1.38-.13-2-.44a4.54 4.54 0 0 0 3.5 4.31 4.3 4.3 0 0 1-2 .06 4.64 4.64 0 0 0 4.19 3.13A8.33 8.33 0 0 1 5.8 23a12.44 12.44 0 0 0 19.32-11.19A7.72 7.72 0 0 0 27.3 9.5a8.3 8.3 0 0 1-2.5.75 4.7 4.7 0 0 0 2-2.5c-.87.5-1.81.87-2.81 1.06a4.5 4.5 0 0 0-5.34-.83z">
+                                </path>
+                            </svg>
+                        </a>
+                    </li>
+                    <li style="margin-right: 16px;">
+                        <a href="https://www.instagram.com/airbnb/">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-label="인스타그램으로 이동하기"
+                                role="img" focusable="false"
+                                style="display: block; height: 18px; width: 18px; fill: currentcolor;">
+                                <path d="M30 0H2a2 2 0 0 0-2 2v28c0 1.1.9 2 2 2h28a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z">
+                                </path>
+                                <path fill="#fff"
+                                    d="M15.71 4h1.25c2.4 0 2.85.02 3.99.07 1.28.06 2.15.26 2.91.56.79.3 1.46.72 2.13 1.38.6.6 1.08 1.33 1.38 2.13l.02.06c.28.74.48 1.58.54 2.8l.01.4c.05 1.02.06 1.63.06 4.4v.92c0 2.6-.02 3.05-.07 4.23a8.78 8.78 0 0 1-.56 2.91c-.3.8-.77 1.53-1.38 2.13a5.88 5.88 0 0 1-2.13 1.38l-.06.02c-.74.28-1.59.48-2.8.53l-.4.02c-1.02.05-1.63.06-4.4.06h-.92a73.1 73.1 0 0 1-4.23-.07 8.78 8.78 0 0 1-2.91-.56c-.8-.3-1.53-.77-2.13-1.38a5.88 5.88 0 0 1-1.38-2.13l-.02-.06a8.84 8.84 0 0 1-.54-2.8l-.01-.37A84.75 84.75 0 0 1 4 16.29v-1c0-2.62.02-3.06.07-4.24.06-1.26.26-2.13.55-2.88l.01-.03c.3-.8.77-1.53 1.38-2.13a5.88 5.88 0 0 1 2.13-1.38l.06-.02a8.84 8.84 0 0 1 2.8-.54l.37-.01C12.39 4 12.99 4 15.71 4zm.91 2.16h-1.24c-2.3 0-2.91.01-3.81.05l-.42.02c-1.17.05-1.8.25-2.23.41-.56.22-.96.48-1.38.9-.4.41-.67.8-.88 1.35l-.03.06a6.7 6.7 0 0 0-.4 2.2l-.02.45c-.04.9-.05 1.53-.05 3.94v1.08c0 2.64.02 3.05.07 4.23v.07c.06 1.13.25 1.74.42 2.16.21.56.47.96.9 1.38.4.4.8.67 1.34.88l.06.03a6.7 6.7 0 0 0 2.2.4l.45.02c.9.04 1.53.05 3.94.05h1.08c2.64 0 3.05-.02 4.23-.07h.07a6.51 6.51 0 0 0 2.16-.42c.52-.19.99-.5 1.38-.9.4-.4.67-.8.88-1.34l.03-.06a6.7 6.7 0 0 0 .4-2.2l.02-.45c.04-.9.05-1.53.05-3.94v-1.09c0-2.63-.02-3.04-.07-4.22v-.07a6.51 6.51 0 0 0-.42-2.16c-.19-.52-.5-.99-.9-1.38a3.7 3.7 0 0 0-1.34-.88l-.06-.03a6.63 6.63 0 0 0-2.16-.4l-.46-.02c-.9-.04-1.5-.05-3.8-.05zM16 9.84a6.16 6.16 0 1 1 0 12.32 6.16 6.16 0 0 1 0-12.32zM16 12a4 4 0 1 0 0 8 4 4 0 0 0 0-8zm6.4-3.85a1.44 1.44 0 1 1 0 2.88 1.44 1.44 0 0 1 0-2.88z">
+                                </path>
+                            </svg>
+                        </a>
+                    </li>
+                    <li style="margin-right: 16px;">
+                        <a href="https://blog.naver.com/airbnbkr">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-label="네이버 블로그로 이동하기"
+                                role="img" focusable="false"
+                                style="display: block; height: 18px; width: 18px; fill: currentcolor;">
+                                <path fill="#222"
+                                    d="M30 0a2 2 0 0 1 2 2v28a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2z">
+                                </path>
+                                <path fill="#fff"
+                                    d="M23.92 6A4.1 4.1 0 0 1 28 9.88l.01.2v9.84A4.08 4.08 0 0 1 24.13 24h-5.86l-1.91 3.31a.45.45 0 0 1-.73.08l-.05-.08-1.91-3.3h-5.6a4.08 4.08 0 0 1-4.06-3.87l-.01-.2v-9.86a4.08 4.08 0 0 1 3.87-4.06l.2-.01zm-1.99 7.22c-1.13 0-2.05.95-2.05 2.12 0 1.16.92 2.1 2.05 2.1.47 0 .9-.15 1.24-.42v.59l-.03.08-.05.1c-.11.16-.36.39-.9.39v1.09h.22c.3-.02.87-.13 1.42-.61l.13-.13.05-.06.1-.12c.11-.17.26-.44.31-.76v-4.28h-1.25v.34a2.02 2.02 0 0 0-1.24-.43zM8.81 11.9H7.58v5.6H8.8v-.4c.35.3.79.5 1.27.5 1.1 0 2-.98 2-2.19s-.89-2.2-2-2.2c-.42 0-.81.15-1.14.4l-.13.1zm8.3 1.31c-1.23 0-2.23.98-2.23 2.2s1 2.18 2.23 2.18c1.22 0 2.22-.98 2.22-2.19s-1-2.19-2.22-2.19zm-3.35-.66a1.98 1.98 0 0 0-1.33-.75H12.22v1.12l.08.01c.14.04.44.16.56.5l.04.12v3.94h1.27v-3.97a2.12 2.12 0 0 0-.24-.7l-.08-.15zM9.84 14.3a1.1 1.1 0 1 1 0 2.19 1.1 1.1 0 0 1-1.12-1.1c0-.15.04-.3.1-.43.17-.4.56-.66 1.02-.66zm7.27.05c.58 0 1.06.47 1.06 1.04s-.47 1.05-1.06 1.05c-.6 0-1.07-.47-1.07-1.05s.48-1.04 1.07-1.04zm5.05-.11c.44 0 .83.24 1.01.6.08.15.12.3.12.48s-.05.34-.12.48c-.18.36-.57.6-1 .6a1.1 1.1 0 0 1-1.13-1.08c0-.6.5-1.08 1.12-1.08z">
+                                </path>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://post.naver.com/airbnb_kr">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-label="네이버 포스트로 이동하기"
+                                role="img" focusable="false"
+                                style="display: block; height: 18px; width: 18px; fill: currentcolor;">
+                                <path fill="#222"
+                                    d="M30 0a2 2 0 0 1 2 2v28a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2z">
+                                </path>
+                                <path fill="#fff"
+                                    d="M10 0h12.81v16.78l-5.88 10.13a.6.6 0 0 1-.99.09l-.06-.1L10 16.79z"></path>
+                                <path fill="#222"
+                                    d="M12.66 4.64v7.5h7.5v-7.5zm5.87 5.69h-1.5l-1.28-1.96v1.96h-1.47V6.45h1.43l1.32 1.95V6.45h1.5z">
+                                </path>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div style="margin: 8px 0px;" class="short-grey-boundary"></div>
+        <div style="font-size: 10px; color: rgb(113, 113, 113); letter-spacing: 0.2px;">웹사이트 제공자: Airbnb Ireland UC,
+            private unlimited company, 8 Hanover Quay Dublin 2,
+            D02 DP23 Ireland | 이사: Dermot Clarke, Killian Pattwell, Andrea Finnegan | VAT 번호:
+            IE9827384L | 사업자 등록 번호: IE 511825 | 연락처: terms@airbnb.com, 웹사이트,
+            080-822-0230 | 호스팅 서비스 제공업체: 아마존 웹서비스 | 에어비앤비는 통신판매 중개자로
+            에어비앤비 플랫폼을 통하여 게스트와 호스트 사이에 이루어지는 통신판매의 당사자가 아닙니다.
+            에어비앤비 플랫폼을 통하여 예약된 숙소, 체험, 호스트 서비스에 관한 의무와 책임은 해당
+            서비스를 제공하는 호스트에게 있습니다.</div>
+    </div>
+
 </body>
 
 </html>
