Docs: divide css file

--- a/clone.html
+++ b/clone.html
@@ -7,7 +7,8 @@
     <link rel="shortcut icon" sizes="76x76" type="image/x-icon"
         href="https://a0.muscache.com/airbnb/static/logotype_favicon-21cc8e6c6a2cca43f061d2dcabdf6e58.ico">
     <title>에어비엔비</title>
-    <link rel="stylesheet" type="text/css" href="index.css ">
+    <link rel="stylesheet" type="text/css"
+        href="index.css basic_element.css button.css flex.css grid.css reactive_layout.css text.css animation.css navigation.css">
 </head>
 
 <body>
@@ -1037,7 +1038,8 @@
             </div>
             <div>
                 <div style="display: inline-block;">
-                    <button style="display: inline-flex; margin-right: 24px;" class="transparent-button flex-vertical-row-align">
+                    <button style="display: inline-flex; margin-right: 24px;"
+                        class="transparent-button flex-vertical-row-align">
                         <span style="width: fit-content; margin-right: 8px; vertical-align: center;">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" aria-hidden="true"
                                 role="presentation" focusable="false"
@@ -1116,8 +1118,8 @@
                                 <path fill="#222"
                                     d="M30 0a2 2 0 0 1 2 2v28a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2z">
                                 </path>
-                                <path fill="#fff"
-                                    d="M10 0h12.81v16.78l-5.88 10.13a.6.6 0 0 1-.99.09l-.06-.1L10 16.79z"></path>
+                                <path fill="#fff" d="M10 0h12.81v16.78l-5.88 10.13a.6.6 0 0 1-.99.09l-.06-.1L10 16.79z">
+                                </path>
                                 <path fill="#222"
                                     d="M12.66 4.64v7.5h7.5v-7.5zm5.87 5.69h-1.5l-1.28-1.96v1.96h-1.47V6.45h1.43l1.32 1.95V6.45h1.5z">
                                 </path>
