--- a/clone.html
+++ b/clone.html
@@ -8,7 +8,7 @@
         href="https://a0.muscache.com/airbnb/static/logotype_favicon-21cc8e6c6a2cca43f061d2dcabdf6e58.ico">
     <title>에어비엔비</title>
     <link rel="stylesheet" type="text/css"
-        href="index.css basic_element.css button.css flex.css grid.css reactive_layout.css text.css animation.css navigation.css">
+        href="index.css basic_element.css button.css flex.css grid.css reactive_layout.css text.css animation.css navigation.css spacing.css">
 </head>
 
 <body>
